# modelretrieval-1-subtask-b

./: .gitattributes  README.md  main.py  pyproject.toml
data/: content-images.csv  models.csv  train.csv
notebooks/: baseline.ipynb
